# thindx-xaudio2

./: Cargo.toml  LICENSE.md  Readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
crates/thindx-xaudio2/: Cargo.toml  Readme.md
crates/thindx-xaudio2-sys/: Cargo.toml  Readme.md
crates/thindx-xaudio2-sys/doc/: _doc.rs  apis.md  features.md  threading.md  versions.md
crates/thindx-xaudio2-sys/src/: _sys.rs  macros.rs  sys20.rs  sys21.rs  sys22.rs  sys23.rs  sys24.rs  sys25.rs  sys26.rs  sys27.rs  sys28.rs  sys29.rs
crates/thindx-xaudio2/doc/: _doc.rs
crates/thindx-xaudio2/examples/: a440.rs  play-wav.rs
crates/thindx-xaudio2/src/: _xaudio2.rs  xa20.rs  xa21.rs  xa22.rs  xa23.rs  xa24.rs  xa25.rs  xa26.rs  xa27.rs  xa28.rs  xa28_buffers.rs  xa28_enginecallback.rs  xa28_ixaudio2_ext.rs  xa28_ixaudio2masteringvoice_ext.rs  xa28_ixaudio2sourcevoice_ext.rs  xa28_ixaudio2voice_ext.rs  xa28_voice.rs  xa28_voicecallback.rs  xa29.rs  xa29_exports.rs
crates/thindx-xaudio2/src/util/: _util.rs
crates/thindx-xaudio2/src/xa28/: _xa28.rs  buffer.rs  buffer_wma.rs  context.rs  engine_callback.rs  ixaudio2_ext.rs  ixaudio2masteringvoice_ext.rs  ixaudio2sourcevoice_ext.rs  ixaudio2voice_ext.rs  loop_count.rs  sample_range.rs  source_buffer.rs  source_format.rs  source_voice.rs  source_voice_dynamic.rs  voice_callback.rs  voices.rs  xa28_enginecallback.rs  xa28_voice.rs  xa28_voicecallback.rs
crates/thindx-xaudio2/src/xa29/: _xa29.rs  exports.rs  ixaudio2extension_ext.rs
scripts/: build.cmd  publish-all.cmd
